--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "openai": "^5.1.1"
+    "express-basic-auth": "^1.2.1",
+    "openai": "^5.1.1",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
